--- a/D-TECT/src/main/resources/templates/admin/admin_page.html
+++ b/D-TECT/src/main/resources/templates/admin/admin_page.html
@@ -19,8 +19,11 @@
         <span class="admin-name" th:text="${displayName}">관리자님</span>
 
         <!-- 로그아웃(POST) -->
-        <form id="logoutForm" th:action="@{/logout}" method="post" style="display:none">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--        <form id="logoutForm" th:action="@{/logout}" method="post" style="display:none">-->
+<!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+<!--        </form>-->
+        <form id="logoutForm" action="#" method="post" style="display:none">
+            <input type="hidden" name="#" value="#" />
         </form>
         <button type="button" class="text-link" id="logoutBtn">로그아웃</button>
     </div>
